kubernetes-ingress-apps/apps3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app3
  labels:
    app.kubernetes.io/name: app3
spec:
  containers:
  - name: app3
    image: prateekkumawat/ingress-example:app3
    resources:
      requests:
        memory: "100Mi"
        cpu: "300m" 
      limits:
        memory: "128Mi"     
        cpu: "500m"
    ports:
    - containerPort: 80
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  selector:
    app.kubernetes.io/name: app3
  ports:
  - port: 80
    targetPort: 80
