kubernetes-ingress-apps/pgadmin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4
  namespace: postgres-app
spec:
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
      - name: pgadmin4
        image: dpage/pgadmin4:latest
        resources:
          requests: 
            memory: "300Mi"
            cpu: "300m"
          limits:
            memory: "600Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: pgadmin-svc
  namespace: postgres-app
spec:
  selector:
    app: pgadmin4
  ports:
  - name: postgres
    port: 80
    targetPort: 80
