kubernetes-ingress-apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ing
  labels:
    app.kubernetes.io/name: app1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  ingressClassName: nginx
  rules:
  - host: api.ocelottraining.com
    http:
      paths:
      - pathType: Prefix
        path: /app1
        backend:
          service:
            name: app1
            port: 
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ing
  labels:
    app.kubernetes.io/name: app2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  ingressClassName: nginx
  rules:
  - host: api.ocelottraining.com
    http:
      paths:
      - pathType: Prefix
        path: /app2
        backend:
          service:
            name: app2
            port: 
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ing
  labels:
    app.kubernetes.io/name: app3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  ingressClassName: nginx
  rules:
  - host: api.ocelottraining.com
    http:
      paths:
      - pathType: Prefix
        path: /app3
        backend:
          service:
            name: app3
            port: 
              number: 80
